Rearrange event square classes to avoid background overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -97,13 +97,17 @@ a:hover {
 	justify-items: center;
 	align-items: end;
 }
-.event-square-size {
+.event-square {
 	container-type: size;
 	grid-row: 1 / 2;
 	grid-column: 1 / 2;
 	width: 80%;
 	aspect-ratio: 1;
 	border: 0.4cqw solid #777777;
+	background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+	padding: 3%;
 	box-shadow:
 		0 0.2cqw 0.2cqw hsl(0deg 0% 0% / 0.08),
 		0 0.4cqw 0.4cqw hsl(0deg 0% 0% / 0.08),
@@ -122,17 +126,13 @@ a:hover {
 	/* the font-size will be adjusted using javascript, starting as 1em and then shrinking if necessary */
 	width: 100%;
 }
-.event-square {
+.event-square-theme-styled {
 	width: 100%;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
 	justify-content: center;
 	align-items: center;
-	padding: 3%;
-	background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
 }
 .event-square > * {
 	display: flex;
@@ -212,7 +212,7 @@ a:hover {
 		width: calc(min(100cqw, 100svh, 42rem));
 		height: calc(min(100cqw, 100svh, 42rem));
 	}
-	.event-square-size {
+	.event-square {
 		width: 100%;
 	}
 	:root {
